--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
     <!-- Header -->
     <header id="header">
         <nav class="container">
-            <div class="logo">PH.</div>
+            <div class="logo">Prachi Holkar</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
