--- a/index.html
+++ b/index.html
@@ -857,10 +857,12 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <span><img src="images/PowerBI_Sales.png",  style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right;"></span>
+                        <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
+                            <img src="images/PowerBI_Sales.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                        </a>
                     </div>
                     <div class="project-content">
-                        <h3>Sales, Customer & Product Insights Dashboard</h3>
+                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Sales, Customer & Product Insights Dashboard</a></h3>
                         <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Power BI</span>
