--- a/index.html
+++ b/index.html
@@ -880,10 +880,11 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <span><img src="images/Python_PriceTracker.png"></span>
+                        <a href="https://github.com/PrachiHolkar/Python_PriceTracker" target="_blank">
+                            <img src="images/Python_PriceTracker.png">
                     </div>
                     <div class="project-content">
-                        <h3>Ulta Beauty Price Tracker</h3>
+                        <h3><a href="https://github.com/PrachiHolkar/Python_PriceTracker" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Ulta Beauty Price Tracker</a></h3>
                         <p> <br> Automated Python tool tracking product prices, logging daily trends, and sending alerts when prices drop below budget thresholds.
                         <br>
                         <br>
