Update project card for Netflix Stock Analysis

--- a/index.html
+++ b/index.html
@@ -906,9 +906,11 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <span><img src="images/Netflix_StockPriceAnalysis.png"></span>
+                        <a href="https://github.com/PrachiHolkar/Python_NetflixStockAnalysis" target="_blank">
+                            <img src="images/Netflix_StockPriceAnalysis.png">
                     </div>
                     <div class="project-content">
+                        <h3><a href="https://github.com/PrachiHolkar/Python_NetflixStockAnalysis" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Netflix Stock Analysis</a></h3>
                         <h3>Netflix Stock Analysis</h3>
                         <p>Comprehensive analysis of Netflix's stock performance from 2002-2025, uncovering trends, returns, and growth patterns using time series analysis.</p>
                         <div class="tech-tags">
