Fix project links and update project titles

--- a/index.html
+++ b/index.html
@@ -882,6 +882,7 @@
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/Python_PriceTracker" target="_blank">
                             <img src="images/Python_PriceTracker.png">
+                        </a>
                     </div>
                     <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/Python_PriceTracker" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Ulta Beauty Price Tracker</a></h3>
@@ -908,10 +909,10 @@
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/Python_NetflixStockAnalysis" target="_blank">
                             <img src="images/Netflix_StockPriceAnalysis.png">
+                        </a>
                     </div>
                     <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/Python_NetflixStockAnalysis" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Netflix Stock Analysis</a></h3>
-                        <h3>Netflix Stock Analysis</h3>
                         <p>Comprehensive analysis of Netflix's stock performance from 2002-2025, uncovering trends, returns, and growth patterns using time series analysis.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Python</span>
@@ -929,10 +930,12 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <span><img src="images/SQL_Healthcare.png", style="padding: 1.5rem; max-width: 85%; max-height: 60%; object-position: right;"></span>
+                        <a href="https://github.com/PrachiHolkar/SQL_healthcare" target="_blank">
+                            <img src="images/SQL_Healthcare.png", style="padding: 1.5rem; max-width: 85%; max-height: 60%; object-position: right;">
+                        </a>
                     </div>
                     <div class="project-content">
-                        <h3>Healthcare Data Analysis</h3>
+                        <h3><a href="hhttps://github.com/PrachiHolkar/SQL_healthcare" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Healthcare Data Analysis<</a></h3>
                         <p>Pure-SQL healthcare analytics transforming patient data into actionable clinical insights from emergency trends to test result patterns.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">SQL</span>
