Update project links and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -935,7 +935,7 @@
                         </a>
                     </div>
                     <div class="project-content">
-                        <h3><a href="hhttps://github.com/PrachiHolkar/SQL_healthcare" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Healthcare Data Analysis<</a></h3>
+                        <h3><a href="https://github.com/PrachiHolkar/SQL_healthcare" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Healthcare Data Analysis</a></h3>
                         <p>Pure-SQL healthcare analytics transforming patient data into actionable clinical insights from emergency trends to test result patterns.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">SQL</span>
@@ -953,10 +953,12 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <span><img src="images/SQL_EComm.png", style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right;"></span>
+                        <a href="https://github.com/PrachiHolkar/SQL_ecom_transaction" target="_blank">
+                            <img src="images/SQL_EComm.png", style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right;">
+                        </a>
                     </div>
                     <div class="project-content">
-                        <h3>E-Commerce Transaction Analysis</h3>
+                        <h3><a href="https://github.com/PrachiHolkar/SQL_ecom_transaction" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">E-Commerce Transaction Analysis</a></h3>
                         <p>SQL-driven analysis of e-commerce transactions, showcasing data cleaning, transformation, and customer behavior insights using advanced techniques.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">SQL</span>
