Enhance link styles with hover effects
Added transition effects and hover styles to LinkedIn and GitHub links.

--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@
                         <div class="contact-icon">
                             <i class="fab fa-linkedin-in"></i>
                         </div>
-                    <h4><a href="https://www.linkedin.com/in/prachi-holkar/" target="_blank" style="color: #f1f5f9; text-decoration: none;">LinkedIn</a></h4>
+                     <h4><a href="https://www.linkedin.com/in/prachi-holkar/" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">LinkedIn</a></h4>
                     <p><a href="https://www.linkedin.com/in/prachi-holkar/" target="_blank">linkedin.com/in/prachi-holkar</a></p>
                 </div>
                 
@@ -1060,7 +1060,7 @@
                     <div class="contact-icon">
                         <i class="fab fa-github"></i>
                     </div>
-                    <h4><a href="https://github.com/PrachiHolkar" target="_blank" style="color: #f1f5f9; text-decoration: none;">GitHub</a></h4>
+                    <h4><a href="https://github.com/PrachiHolkar" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">GitHub</a></h4>
                     <p><a href="https://github.com/PrachiHolkar" target="_blank">github.com/PrachiHolkar</a></p>
                 </div>
                 
