--- a/index.html
+++ b/index.html
@@ -862,6 +862,29 @@
                         </a>
                     </div>
                     <div class="project-content">
+                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Spotify Top 50 USA – Trending Songs Dashboard</a></h3>
+                        <p>Designed a Spotify-themed Power BI dashboard to showcase data visualization, layout hierarchy, and storytelling skills by presenting music trends, popularity patterns, and artist dominance.</p>
+                        <div class="tech-tags">
+                            <span class="tech-tag">Data Visualization</span>
+                            <span class="tech-tag">DAX</span>
+                            <span class="tech-tag">Power Query</span> 
+                            <span class="tech-tag">Dashboard Design & Storytelling</span> 
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> View Code
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-image">
+                        <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
+                            <img src="images/PowerBI_Sales.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                        </a>
+                    </div>
+                    <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Sales, Customer & Product Insights Dashboard</a></h3>
                         <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</p>
                         <div class="tech-tags">
