--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                         </a>
                     </div>
                     <div class="project-content">
-                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Spotify Top 50 USA – Trending Songs Dashboard</a></h3>
+                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Spotify Top 50 USA – Trending Songs Dashboard</a></h3>
                         <p>Designed a Spotify-themed Power BI dashboard to showcase data visualization, layout hierarchy, and storytelling skills by presenting music trends, popularity patterns, and artist dominance.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Data Visualization</span>
@@ -886,7 +886,7 @@
                     </div>
                     <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Sales, Customer & Product Insights Dashboard</a></h3>
-                        <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</p>
+                        <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</br></p>
                         <div class="tech-tags">
                             <span class="tech-tag">Power BI</span>
                             <span class="tech-tag">DAX</span>
