--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                 <p class="section-description">Real-world data solutions demonstrating end-to-end analytical capabilities</p>
             </div>
             <div class="projects-grid">
-
+                <!--
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
@@ -877,7 +877,7 @@
                         </div>
                     </div>
                 </div>
-                
+                -->
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
@@ -886,7 +886,7 @@
                     </div>
                     <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Sales, Customer & Product Insights Dashboard</a></h3>
-                        <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</br></p>
+                        <p>Built a Power BI dashboard to analyze sales performance, customer behavior, and product trends using a star-schema data model and various KPIs.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Power BI</span>
                             <span class="tech-tag">DAX</span>
