--- a/index.html
+++ b/index.html
@@ -854,11 +854,11 @@
                 <p class="section-description">Real-world data solutions demonstrating end-to-end analytical capabilities</p>
             </div>
             <div class="projects-grid">
-                <!--
+               
                 <div class="project-card">
                     <div class="project-image">
-                        <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
-                            <img src="images/PowerBI_Sales.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                        <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank">
+                            <img src="images/Spotify.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="project-content">
@@ -871,13 +871,13 @@
                             <span class="tech-tag">Dashboard Design & Storytelling</span> 
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank" class="project-link">
+                            <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank" class="project-link">
                                 <i class="fab fa-github"></i> View Code
                             </a>
                         </div>
                     </div>
                 </div>
-                -->
+                
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
