--- a/index.html
+++ b/index.html
@@ -857,8 +857,8 @@
 
                 <div class="project-card">
                     <div class="project-image">
-                        <a href="https://github.com/PrachiHolkar/Spotify_PowerBI" target="_blank">
-                            <img src="images/Spotify.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                        <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank">
+                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="project-content">
@@ -909,10 +909,7 @@
                     </div>
                     <div class="project-content">
                         <h3><a href="https://github.com/PrachiHolkar/Python_PriceTracker" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Ulta Beauty Price Tracker</a></h3>
-                        <p> <br> Automated Python tool tracking product prices, logging daily trends, and sending alerts when prices drop below budget thresholds.
-                        <br>
-                        <br>
-                        <br>
+                        <p> Automated Python tool tracking product prices, logging daily trends, and sending alerts when prices drop below budget thresholds.
                         </p>
                         <div class="tech-tags">
                             <span class="tech-tag">Python</span>
