--- a/index.html
+++ b/index.html
@@ -858,11 +858,11 @@
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank">
-                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 70%; max-height: 35%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="project-content">
-                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Spotify Top 50 USA – Trending Songs Dashboard</a></h3>
+                        <h3><a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank" style="color: #f1f5f9; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.textDecoration='underline'" onmouseout="this.style.textDecoration='none'">Spotify Top 50 Songs Dashboard</a></h3>
                         <p>Designed a Spotify-themed Power BI dashboard to showcase data visualization, layout hierarchy, and storytelling skills by presenting music trends, popularity patterns, and artist dominance.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Data Visualization</span>
