--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank">
-                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 70%; max-height: 35%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 60%; max-height: 20%; object-position: center; width: 100%; height: 100%; object-fit: contain;">
                         </a>
                     </div>
                     <div class="project-content">
