--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Spotify" target="_blank">
-                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 60%; max-height: 20%; object-position: left; width: 100%; height: 100%; object-fit: contain;">
+                            <img src="images/Spotify_PowerBI.png" style="padding: 1.5rem; max-width: 60%; max-height: 40%; margin-left: 20%">
                         </a>
                     </div>
                     <div class="project-content">
@@ -881,7 +881,7 @@
                 <div class="project-card">
                     <div class="project-image">
                         <a href="https://github.com/PrachiHolkar/PowerBI_Sales" target="_blank">
-                            <img src="images/PowerBI_Sales.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; object-fit: contain;">
+                            <img src="images/PowerBI_Sales.png" style="padding: 1.5rem; max-width: 90%; max-height: 55%; object-position: right; width: 100%; height: 100%; margin-left: 5%">
                         </a>
                     </div>
                     <div class="project-content">
